
WIP      Update code to use xbmcgui.Dialog().select() - additions. Get rid of the ImgSelectDialog()
         class. This need Krypton Beta 4 to run!

WIP      Edit multidisc ROMs.

WIP      Support ERSB and NPlayers in offline scraper.

WIP      Support ERSB and NPlayers in online scraper.

WIP      ROM scanner report.


[B]Advanced Emulator Launcher | version 0.9.6 | xx March 2017[/B]


[B]Advanced Emulator Launcher | version 0.9.6-beta1 | 5 March 2017[/B]

FEATURE  Import and Export of Launchers configurations. Will be very useful especially for 
         Android users.

FEATURE  Use a Window property to let skins know wheter a launcher OR ROMs are being rendered.
         Set xbmcgui.Window(10001).setProperty('AEL_Content', 'launchers')
             xbmcgui.Window(10001).setProperty('AEL_Content', 'roms')
         It must be set on entering and unset on exiting the plugin.

FEATURE  Use setProperty() to inform the skin about ROM flags:
           1) Favourite status: OK, Unlinked ROM, Unlinked Launcher, Broken
           2) No-Intro status: Have, Missing, Added, Unknown
           3) Parent/Clone status: Parent or Clone (Boolean)

         For example:
           setProperty('AEL_Fav_stat',     'Fav_OK')
           setProperty('AEL_NoIntro_stat', 'NoIntro_Have')
           setProperty('AEL_PClone_stat',  'PClone_Parent')

FEATURE  Add Retroplayer support.
         See https://github.com/Wintermute0110/plugin.program.advanced.emulator.launcher/issues/33

FEATURE  New menu for the virtual launchers [Browse by ...]

FEATURE  New virtual launchers [Browse by ESRB Rating] and Browse by [Number of Players].

FEATURE  Added new platforms Xbox One, Nintendo Switch, Nintendo Wii U, PSX 3 and PSX 4.

FEATURE  Clearlogos in Categories, Launchers and ROM Collections.

FEATURE  Edit clearlogos in Categories.

FEATURE  Edit clearlogos in Launchers.

FEATURE  Edit clearlogos in ROM Collections.

FEATURE  Default to launcher icon if ROM icon is missing.